--- a/multitimer.html
+++ b/multitimer.html
@@ -133,7 +133,7 @@
 			min-width: 1em;
 		}
 		
-		.fa-cog {
+		.fa-clock-o {
 			color: #00c;
 		}
 		
@@ -181,7 +181,7 @@
 		
 		<script>
 		
-		RUNNING_CLASS = "fa-cog";
+		RUNNING_CLASS = "fa-clock-o";
 		DONE_CLASS = "fa-check";
 		ERROR_CLASS = "fa-exclamation";
 		
