--- a/multitimer.html
+++ b/multitimer.html
@@ -58,7 +58,7 @@
 			margin: 0;
 		}
 		
-		#startButton {
+		.actions {
 			margin: 0.5em 0 2em 0;
 		}
 		
@@ -101,7 +101,8 @@
 			top:1px;
 		}
 
-		.main-button:disabled {
+		.main-button:disabled,
+		.secondary-button:disabled {
 			-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
 			-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
 			box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -118,7 +119,8 @@
 			color:#666666;
 			text-shadow:0px 1px 0px #ffffff;
 		}
-		.main-button:hover:disabled {
+		.main-button:hover:disabled,
+		.secondary-button:hover:disabled {
 			background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9));
 			background:-moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
 			background:-webkit-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
@@ -128,6 +130,48 @@
 			filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9',GradientType=0);
 			background-color:#f9f9f9;
 		}
+		
+		
+		.secondary-button {
+			-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+			-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+			box-shadow:inset 0px 1px 0px 0px #ffffff;
+			background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9));
+			background:-moz-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+			background:-webkit-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+			background:-o-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+			background:-ms-linear-gradient(top, #f9f9f9 5%, #e9e9e9 100%);
+			background:linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+			filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9',GradientType=0);
+			background-color:#f9f9f9;
+			-moz-border-radius:3px;
+			-webkit-border-radius:3px;
+			border-radius:3px;
+			border:1px solid #dcdcdc;
+			display:inline-block;
+			cursor:pointer;
+			color:#666666;
+			font-size:14px;
+			padding:6px 24px;
+			text-decoration:none;
+			text-shadow:0px 1px 0px #ffffff;
+		}
+		.secondary-button:hover {
+			background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9));
+			background:-moz-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+			background:-webkit-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+			background:-o-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+			background:-ms-linear-gradient(top, #e9e9e9 5%, #f9f9f9 100%);
+			background:linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+			filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9',GradientType=0);
+			background-color:#e9e9e9;
+		}
+		.secondary-button:active {
+			position:relative;
+			top:1px;
+		}
+
+		
 		
 		.fa {
 			min-width: 1em;
@@ -162,7 +206,14 @@
 				</li>
 			</ul>
 			
-			<button onclick="start();" id="startButton" class=main-button>Start</button>
+			<ul class=actions>
+				<li>
+					<button onclick="start();" id="startButton" class=main-button>Start</button>
+				</li>
+				<li>
+					<button onclick="reset();" id="resetButton" class=secondary-button>Reset</button>
+				</li>
+			</ul>
 			
 			<p class=note>Send feedback to <a href="mailto:diogoko@gmail.com">diogoko@gmail.com</a></p>
 			
@@ -270,12 +321,12 @@
 		}
 		
 		function disableAll() {
-			$("#startButton").prop("disabled", true);
+			$("#startButton, #resetButton").prop("disabled", true);
 			$("#timeList input").prop("disabled", true);
 		}
 		
 		function enableAll() {
-			$("#startButton").prop("disabled", false);
+			$("#startButton, #resetButton").prop("disabled", false);
 			$("#timeList input").prop("disabled", false);
 		}
 		
@@ -289,6 +340,10 @@
 		
 		function setDoneIndicator() {
 			$("#timeList .fa").eq(timesPositions[0]).removeClass(RUNNING_CLASS).addClass(DONE_CLASS);
+		}
+		
+		function reset() {
+			$("#timeList input").val("");
 		}
 		
 		</script>
